src/tests/golden/invalid_il/shift_i32_result.il
il 0.3.0

func @main() -> i32 {
entry:
  %x:i32 = shl 1, 2
  ret %x
}
